--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <log4jVersion>1.2.17</log4jVersion>
         <fileuploadVersion>1.3.1</fileuploadVersion>
         <lombokVersion>1.16.10</lombokVersion>
+        <shiroVersion>1.3.2</shiroVersion>
     </properties>
 
     <dependencies>
@@ -123,7 +124,14 @@
             <version>${lombokVersion}</version>
             <scope>provided</scope>
         </dependency>
-
+		
+		 <!-- shiro -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiroVersion}</version>
+        </dependency>
+        
     </dependencies>
 
 
