--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 jdbc.driver = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/directselling?useUnicode=true&characterEncoding=utf-8
 jdbc.username =root
-jdbc.password =1234
+jdbc.password =admin
 
 #hibernate config
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
