--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,12 @@
 #database connection config
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/directselling?useUnicode=true&characterEncoding=utf-8
+#jdbc.url = jdbc:mysql://localhost:3306/directselling?useUnicode=true&characterEncoding=utf-8
+#jdbc.username =root
+#jdbc.password =1234
+
+jdbc.url = jdbc:mysql://rm-wz984magtfs8xzvjmpo.mysql.rds.aliyuncs.com:3306/directselling?useUnicode=true&characterEncoding=utf-8
 jdbc.username =root
-jdbc.password =1234
+jdbc.password =Hemincan007
 
 #hibernate config
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
